# nautilus_tutorial

./: .gitignore  README.md  resources.md  scaler.pkl  test.ipynb  test_agg.py  test_model.ipynb
.chat/: .deletedTopics  config.json  functions.json
.ipynb_checkpoints/: test-checkpoint.ipynb
avellaneda_stoikov/: Cargo.toml  as_market_maker.py  as_market_maker1.py  as_market_maker2.py  setup.py
avellaneda_stoikov/python/avellaneda_stoikov/: __init__.py
avellaneda_stoikov/python/avellaneda_stoikov/tests/: __init__.py  as_synthetic_quote_eval.py  smoke_test_as_calibrator.py
avellaneda_stoikov/src/: avellaneda_stoikov.rs  lib.rs
avellaneda_stoikov/src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
avellaneda_stoikov/src/avellaneda_stoikov.egg-info/: PKG-INFO  SOURCES.txt
avellaneda_stoikov/src/eie/: estimator_executor.rs  intensity_estimator.rs  intensity_info.rs  mod.rs  readme.md
avellaneda_stoikov/src/eie/calibration/: aksolver_factory.rs  empirical_intensity_estimator.rs  mod.rs  multicurve_aksolver.rs  regression_aksolver.rs  spread_intensity_curve.rs  traits.rs
avellaneda_stoikov/strategy/simple_as/: as_estimate_quote_strategy.py  numba_utils.py  quote_utils.py
example_data/: Untitled.ipynb  analysis.ipynb  binance_kline_download.py  coin_tags.csv  filtered_symbols.txt
finml/: RADME.MD  README.md  setup.py
finml_extension/: Cargo.toml  pyproject.toml
finml_extension/python/finml_extension/: __init__.py  hop.py
finml_extension/src/: lib.rs
finml_extension/src/hop/: mod.rs  rolling_ops.rs
finml_lib/: setup.py
notebook/: CNNTransformer.md  binance_analysis.ipynb  test_label.ipynb
process/: backtest_example.py  config.json  get_all_instruments.py  orderbook_write.py  preprocess_trade_data.py  tick2timebar.py
streamlit_app/: data_scheme.py  factor_analysis.py  io_tool.py  main.py  plot.py  stream2batch.py  trade_analysis.py
test/: aggTrade_agg.py  aggregate_timebar.py  backtest_genericdata.py  binance_top_search_symbols.py  config.json  generate_dataset.py  (+19 more)
(+413 files in other folders)
