[package]
name = "avellaneda_stoikov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.20.2", features = ["extension-module"] }
linreg = "0.2.0"
log = "0.4.17"

[lib]
name = "avellaneda_stoikov"
crate-type = ["cdylib"]
