[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "finml_extension"
requires-python = ">=3.8"
version = "0.1.0"

license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
authors = [
    {name = "yfclark", email = "1825617022@qq.com"},
]
dependencies = [
    "polars >= 0.20.6",
] 

keywords = ["polars-extension", "scientific-computing", "data-science"]

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "finml_extension._finml_extension"

[project.optional-dependencies]
dev = [
    "numpy",
    "pre-commit",
]

[tool.ruff]
line-length = 100
fix = true
src = ["python"]